# Altium-Schematic-Parser

./: .gitignore  Altium Schematic Parser.ipynb  LICENSE  README.md  parse.py  pyproject.toml  requirements.txt  setup.py
altium_crap/CIS/: Example database.mdb
altium_crap/CIS/Example DBLib/: VishayCapacitor.DBLib
altium_crap/PCB Auto-Routing/: BOARD 2.pcbdoc  Routed BOARD 1.pcbdoc  Routed BOARD 3.pcbdoc
altium_schematic_parser/: cli.py  parse.py
tests/altium_crap/: AudioCodec_Polyphonic.schdoc  Boost Converter.SchDoc  Buzzer.SchDoc  CAN_Receiver.SchDoc  CS4270_Audio_Codec.SchDoc  Control.SchDoc  Counter.SchDoc  CounterFlag.SchDoc  Crystal Oscillator.schdoc  Custom_Instrument_Design.SchDoc  DB31_Cached_SDRAM_Shared_Bus.SchDoc  DRIVERS.SchDoc  Diode Model.SchDoc  Dual Polarity Power Supply.schdoc  Ext_Mem.SchDoc  FAT_File_System.SchDoc  FPGA_165A_CAN_Receiver.SchDoc  FPGA_165B_DAC.SchDoc  FPGA_165B_DigitizedSound.SchDoc  FPGA_51_Ethernet_Ping_E_MAC.SchDoc  FPGA_51_Ethernet_Ping_E_MAC_MD.SchDoc  FPGA_51_Serial.SchDoc  FPGA_52_C_165B_ASM_Buzzer.SchDoc  FPGA_52_Ethernet_Send_Frame_E_MAC_W.SchDoc  FPGA_80A_SerialO.SchDoc  FPGA_Altera_Stratix_III_Dev_Board.SchDoc  FPGA_Digilant_Spartan2E_D2E_top.SchDoc  FPGA_Digilent_Spartan2E_Digilab_2FT.SchDoc  FPGA_LedChaser_EvalBoard.SchDoc  FPGA_Processor.SchDoc  FPGA_Project2.SchDoc  Four Decade BCD Counter.SchDoc  Interrupts.SchDoc  LCD_Keypad.SchDoc  LED_Example_v24.1.2.SchDoc  Mixed-mode Binary Ripple 555.schdoc  NB2_CurrentSense.SchDoc  NB3000_CS4270_Audio_Codec.SchDoc  NB3000_Complex.SchDoc  NB3000_Edge_Detection.SchDoc  (+31 more)
(+3506 files in other folders)
